force-app/main/default/objects/ExceptionLog_Settings__c/ExceptionLog_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ExceptionLog Settings</label>
</CustomObject>