force-app/main/default/objects/ExceptionLog_Settings__c/fields/Exception_Log_Email_DL__c.field-meta.xml
<CustomField>
    <fullName>Exception_Log_Email_DL__c</fullName>
    <description>Field to store daily exception report email recipient DL.</description>
    <label>Exception Log Email DL</label>
    <type>Email</type>
</CustomField>