force-app/main/default/objects/ExceptionLog_Settings__c/fields/Exception_Log_Removal_Days__c.field-meta.xml
<CustomField>
    <fullName>Exception_Log_Removal_Days__c</fullName>
    <label>Exception Log Removal(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>