force-app/main/default/objects/ExceptionLog_Settings__c/fields/Exception_Type_Limit__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type_Limit__c</fullName>
    <description>Exception type limit for sending daily email.</description>
    <label>Exception Type Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>