force-app/main/default/objects/ExceptionLog_Settings__c/fields/Logging_Level__c.field-meta.xml
<CustomField>
    <fullName>Logging_Level__c</fullName>
    <label>Logging Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>